--- a/gb/23/8/4/n14047978.md
+++ b/gb/23/8/4/n14047978.md
@@ -21,50 +21,41 @@
 <figure id="attachment_14047988" aria-describedby="caption-attachment-14047988" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14047988-casa-do-penedo-house-2.jpg"><img class=" wp-image-14047988" src="https://i.epochtimes.com/assets/uploads/2023/08/id14047988-casa-do-penedo-house-2.jpg" alt="" width="601" b="400" /></a><figcaption id="caption-attachment-14047988" class="wp-caption-text">(Shutterstock)</figcaption></figure>
 <p>由于造型太过奇特、迷人，这座石头房子为自己赢得了“现实版<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E3%80%8A%E6%91%A9%E7%99%BB%E5%8E%9F%E5%A7%8B%E4%BA%BA%E3%80%8B.md#1">《摩登原始人》</a>之屋”的绰号，甚至还出现在葡萄牙一部电影和2018年的一部手机广告中。</p>
 <p>维托尔说：“从2014年开始，当这座房子被认为是世界上最奇异的建筑并被刊登在伦敦一家报纸时，越来越多的人们开始对其感兴趣。”</p>
-<p>罗德里格斯一家人会说葡萄牙语、英语、法语和西班牙语，因此他们现在非常喜欢组织<ahref="https://www.casadopenedofafe.com/">导览服务</a>，带领来自世界各地的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E5%AE%A2.md#1">游客</a>参观这座独特的房子。</p>
+<p>罗德里格斯一家人会说葡萄牙语、英语、法语和西班牙语，因此他们现在非常喜欢组织<ahref="https://www.casadopenedofafe.com/">导览服务</a>，带领来自世界各地的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E5%AE%A2.md#1">游客</a>参观这座独特的房子。◇</p>
 <figure id="attachment_14047990" aria-describedby="caption-attachment-14047990" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14047990-casa-do-penedo-house-4.jpg"><img class=" wp-image-14047990" src="https://i.epochtimes.com/assets/uploads/2023/08/id14047990-casa-do-penedo-house-4.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14047990" class="wp-caption-text">(Shutterstock)</figcaption></figure>
 <figure id="attachment_14047989" aria-describedby="caption-attachment-14047989" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14047989-casa-do-penedo-house-3.jpg"><img class=" wp-image-14047989" src="https://i.epochtimes.com/assets/uploads/2023/08/id14047989-casa-do-penedo-house-3.jpg" alt="" width="599" b="399" /></a><figcaption id="caption-attachment-14047989" class="wp-caption-text">(Shutterstock)</figcaption></figure>
 <p>责任编辑：韩玉#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/26/n10933949.md#1">广西耗资15亿元医院 被吐槽：造型似马桶</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/17/n11193478.md#1">神秘又奇异 巴黎圣母院的滴水嘴兽和石像怪</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/24/n11610346.md#1">中国古建筑之奇人异事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013220.md#1">组图：奇异的粘土金字塔群 还戴着“帽子”</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046260.md#1">美调查记者：俄战机曾与UFO交战至少45次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044414.md#1">英国姊妹转生原父母的双胞胎女儿 再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030367.md#1">【古道人生】他为何能从一个贱丐做到水陆提督</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045197.md#1">【未解之谜】释迦座下神通第一 目犍连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041411.md#1">在酒店饮酒延误朝见  怎么还能受重用成为重臣？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048141.md#1">【新闻大破解】两岸防救灾对比 中共推二法保党</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048278.md#1">【新唐人快报】中国粮食堪忧 农民哀叹全完了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048063.md#1">【新闻大家谈】弃中共体制 女教师走线美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046302.md#1">外交部记者会放长假 秦刚事件大戏在后头？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046785.md#1">汪峰评析刀郎新辑 回应《罗刹海市》所指争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046193.md#1">河北涿州水深四五米 航拍现场：仅露树冠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046785.md#1">汪峰评析刀郎新辑 回应《罗刹海市》所指争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14046120.md#1">巡演场场爆满 泰勒奖卡车司机每人10万美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046368.md#1">涉多起性骚性侵遭提告 NONO今赴北检应讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046890.md#1">台上谢幕时踉跄摔倒 57岁林志炫爬起拎鞋跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047541.md#1">演员谢宁被困涿州老家 3层自建房淹了2层</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046757.md#1">这颜色地瓜的叶子抗氧化力更强 1吃法营养最佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14043910.md#1">治驼背不用看医生？7招自我复健 改善心悸胸闷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046430.md#1">搭机时如何解决脚臭的问题？前空姐这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047242.md#1">研究：生活中养成8种习惯 让你多活24岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14044839.md#1">头发因老化、压力变白后 何时可以逆转？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/4/n14047978.htm">组图：葡萄牙一座独特的“石屋” 风靡全球</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
