--- a/gb/23/8/1/n14046094.md
+++ b/gb/23/8/1/n14046094.md
@@ -6,65 +6,56 @@
 <h6>渥太华部分沃尔玛门店取消自助结账服务。图为沃尔玛资料照。（Shutterstock）
 </h6>
 <hr>
-<p>【大纪元2023年08月02日讯】（大纪元记者王兰多伦多报导）加拿大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%83%E5%B0%94%E7%8E%9B.md#1">沃尔玛</a>已<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%96%E6%B6%88.md#1">取消</a>渥太华至少一处门店的自助结账服务，转而重新聘请更多收银员。</p>
-<p>据CTV报导，位于安省渥太华Billings Bridge购物中心的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%83%E5%B0%94%E7%8E%9B.md#1">沃尔玛</a>从上周六起<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%96%E6%B6%88.md#1">取消</a>了自助结账服务，该区域已被封锁，收银台附近张贴的标志称：“我们很高兴地宣布，将从7 月 29 日（周六）开始对全方位服务体验进行测试。在此测试期间，我们的员工将扫描所有物品，包括在我们的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E5%8A%A9%E7%BB%93%E8%B4%A6.md#1">自助结账</a>区域正在处理的物品。”</p>
-<p>目前尚不清楚沃尔玛这家店的测试将持续多久。 CTV 联系沃尔玛寻求置评，但没有收到回复。</p>
+<p>【大纪元2023年08月02日讯】（大纪元记者王兰多伦多报导）加拿大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%83%E5%B0%94%E7%8E%9B.md#1">沃尔玛</a>已<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%96%E6%B6%88.md#1">取消</a>渥太华至少一处门店的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E5%8A%A9%E7%BB%93%E8%B4%A6.md#1">自助结账</a>服务，转而重新聘请更多收银员。</p>
+<p>据CTV报导，位于安省渥太华Billings Bridge购物中心的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%83%E5%B0%94%E7%8E%9B.md#1">沃尔玛</a>从上周六起<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%96%E6%B6%88.md#1">取消</a>了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E5%8A%A9%E7%BB%93%E8%B4%A6.md#1">自助结账</a>服务，该区域已被封锁，收银台附近张贴的标志称：“我们很高兴地宣布，将从7月29日（周六）开始对全方位服务体验进行测试。在此测试期间，我们的员工将扫描所有物品，包括在我们的自助结账区域正在处理的物品。”</p>
+<p>目前尚不清楚沃尔玛这家店的测试将持续多久。 CTV联系沃尔玛寻求置评，但没有收到回复。</p>
 <p>据一位向沃尔玛工作人员询问了这一变化的Reddit用户透露，这一举措是因为店内的“盗窃事件增加”，并且是“应总部要求”的结果。</p>
-<p>Reddit帖子的一条回复写道：“就我个人而言，我喜欢<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E5%8A%A9%E7%BB%93%E8%B4%A6.md#1">自助结账</a>。只买几样东西的时候非常方便，而且不需要和人交流。”</p>
-<p>有人问道：“他们为什么不重新开放普通的收银台？听起来像是个愚蠢的系统。加拿大轮胎（Canadian Tire）曾经推出自助结账机大约6个月，然后迅速取消了，因为他们知道这很容易被偷。”</p>
+<p>Reddit帖子的一条回复写道：“就我个人而言，我喜欢自助结账。只买几样东西的时候非常方便，而且不需要和人交流。”</p>
+<p>有人问道：“他们为什么不重新开放普通的收银台？听起来像是个愚蠢的系统。加拿大轮胎（Canadian Tire）曾经推出自助结账机大约6个月，然后迅速取消了，因为他们知道东西很容易被偷。”</p>
 <h2>零售商打击入店盗窃行为</h2>
 <p>与此同时，包括杂货店在内的其它零售商一直在采取措施，以打击入店行窃行为的增加，包括在入口和出口的大门检查收据。</p>
-<p>然而，这种不断扩大的做法引起了一些购物者的反感，他们认为并非每个使用自助结账机的人都是为了偷窃，不能被贴上标签。</p>
-<p>今年早些时候，沃尔玛加拿大首席执行官格博拉（ Gonzala Gebara ）表示，该公司一直在致力于完善安全方面的“内部流程”。</p>
-<p>“我们一直致力于技术投资。我们与 加拿大零售委员会保持着良好的联系，并与所有人合作，以便我们能够使我们的商店成为客户购物和员工工作的最安全场所 。”他说。</p>
+<p>然而，这种不断扩大的做法引起了一些购物者的反感，他们认为并非每个使用自助结账机的人都是为了偷窃，不能被贴上（小偷的）标签。</p>
+<p>今年早些时候，沃尔玛加拿大首席执行官格博拉（Gonzala Gebara）表示，该公司一直在致力于完善安全方面的“内部流程”。</p>
+<p>“我们一直致力于技术投资。我们与加拿大零售委员会保持着良好的联系，并与所有人合作，以便我们能够使我们的商店成为客户购物和员工工作的最安全场所 。”他说。</p>
 <p>当被问及自助结账时，他当时表示没有计划减少自助结账以遏制盗窃。</p>
-<p>根据加拿大统计局的数据，2022 年警方报告的入店行窃案件比前一年增加了 31%。</p>
+<p>根据加拿大统计局的数据，2022年警方报告的入店行窃案件比前一年增加了31%。</p>
 <p>责任编辑：严枫</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14046054.md#1">约克区无家可归者增 住房危机恶化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14046032.md#1">罢工持续 超市Metro多伦多店捐出易腐烂食品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14046031.md#1">多伦多警察开枪三次击中男子 SIU调查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14046023.md#1">击毙入室抢劫嫌犯 安省屋主二级谋杀指控被撤销</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045906.md#1">医疗研发成果丰硕 多伦多大学排名仅次哈佛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045396.md#1">多伦多高地公园禁车一期方案实施</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045389.md#1">TTC地铁缩短晚7点至10点等待时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045341.md#1">安省回归教育根本法通过 重视学生知识和技能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045357.md#1">机器故障 多伦多男子信用评级骤降</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106367.md#1">渥太华医院火灾 消防员营救17名加护病房婴儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106341.md#1">价格上涨 安省周三起转入冬季电费模式? ?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106285.md#1">列治文山新婚夫妇寻逃逸“女花童”爱犬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106304.md#1">贾平讲故事：人的道德飞速下滑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106286.md#1">邹至蕙和福特联手要求联邦解决财政困境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106235.md#1">安省女性乳腺癌筛查年龄降至40岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106229.md#1">安省大学学费冻结 校方陷财务困境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105564.md#1">加拿大万锦市电影节 疑遭中共干涉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105552.md#1">多伦多公共图书馆网络受攻击 部分服务暂停</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105558.md#1">“不给糖就捣蛋”防过敏有招 别被糖果太小吓着</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444363.md#1" target="_blank">共产暴政录：中共积极响应北塔山入侵事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/20/2/7/n11852128.md#1">《刘伯温碑记》点明避开瘟疫的真言</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042367.md#1">港作家叹大陆出不了这三人 最欣赏倪匡气节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040949.md#1">【未解之谜】特异功能大师 李有甫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035789.md#1">南希?里根的最佳角色（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14038991.md#1">中国哲学思想的智慧：虚室生白 吉祥自来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030367.md#1">【古道人生】他为何能从一个贱丐做到水陆提督</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045754.md#1">【晚间新闻】大洪水淹北京城 伤亡惨重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045353.md#1">【中国禁闻】中共火箭军高层洗牌 司令政委换将</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045587.md#1">【新闻大破解】经济倒退 民企5诉求要中共下跪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044668.md#1">传火箭军前副司令吴国华自杀 老上司曝内情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044207.md#1">为何乘客都不想在登机牌上看到这四个字母</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044315.md#1">一千多年前一座遭遗弃的玛雅城市被发现</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044708.md#1">《中国好声音》开播2分钟 网民吐槽 评论关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044530.md#1">杨紫琼认嫁富商尚?陶德 甜晒合照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044675.md#1">周润发跑步不慎摔倒 自曝肋骨断裂呼吸都会痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044580.md#1">李玟告别式7/31举行 丈夫不在讣闻名单中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044535.md#1">泰勒丝演唱会撼动西雅图 歌迷引发规模2.3地震</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043848.md#1">浴室霉菌易诱发过敏 做到5点彻底除霉菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14044841.md#1">2026年美国房价涨多少？高盛这样预测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14041972.md#1">泡茶奉茶品茗 茶道艺术中的自然美学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044562.md#1">时差的成因与缓解方法 一文看懂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045039.md#1">长途坐车养成这个习惯 可能会救你一命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/1/n14046094.htm">安省沃尔玛部分门店 取消自助结账服务</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/1/n14046094.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
